err/ufs-tools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ufs_tools'...
Compiling './lib/python3.5/site-packages/ufs_tools/app_framework.py'...
***   File "./lib/python3.5/site-packages/ufs_tools/app_framework.py", line 27
    print full_path
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ufs_tools/app_tools.py'...
***   File "./lib/python3.5/site-packages/ufs_tools/app_tools.py", line 23
    print "!!!!!!!!!", executable_folder
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ufs_tools/file_search.py'...
***   File "./lib/python3.5/site-packages/ufs_tools/file_search.py", line 9
    print 'find file:', os.path.join(dirpath, filename)
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ufs_tools/folder_file_processor.py'...
***   File "./lib/python3.5/site-packages/ufs_tools/folder_file_processor.py", line 22
    print "processing:", full_path
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ufs_tools/folder_tool.py'...
***   File "./lib/python3.5/site-packages/ufs_tools/folder_tool.py", line 18
    print "find root path failed, last_file_path: %s, file_path: " \
                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ufs_tools/python_app_utils'...
Listing './lib/python3.5/site-packages/ufs_tools/short_decorator'...
Compiling './lib/python3.5/site-packages/ufs_tools/short_decorator/ignore_exception.py'...
***   File "./lib/python3.5/site-packages/ufs_tools/short_decorator/ignore_exception.py", line 39
    except exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ufs_tools/string_tools.py'...
***   File "./lib/python3.5/site-packages/ufs_tools/string_tools.py", line 191
    print split_with_chars(v, u"\r\t\n,")
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ufs_tools-0.5.15.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
